<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sleep Tracker</string>
    <string name="menu_settings">Settings</string>
    <string name="go_to_sleep">Go To Sleep</string>
    <string name="wake_up">Wake Up</string>
    <string name="view_data">View Data</string>
    <string name="view_graphs">View Graphs</string>
    <string name="status">Status:</string>
    <string name="sleep">SLEEP</string>
    <string name="wake">WAKE</string>
    <string name="pending">Pending&#8230;</string>
    <string name="comment_hint">Comments on sleep</string>
    <string name="edit">Edit</string>
    <string name="nap">Nap</string>
    <string name="night_sleep">Sleep</string>
    <string name="edit_time">Edit Time/Date</string>
    <string name="save">Save</string>

    <string name="tip_of_day">TIP OF THE DAY</string>
    
    <!--  Profile strings -->
    <string name="profile_action">Profile</string>
    <string name="profile_view">View Profile</string>
    <string name="save_profile">Save profile</string>
    <string name="cancel_profile">Cancel</string>
    <string name="profile_title">Edit User Profile</string>
    <string name="profile_class_year_text">Class Year:</string>
    <string name="profile_school_text">School at Penn:</string>
    <string name="profile_smoking_text">How often do you smoke?</string>
    <string name="profile_smoking_1">Never</string>
    <string name="profile_smoking_2">Rarely (1&#8211;2 cigarettes/month)</string>
    <string name="profile_smoking_3">Occasionally (1&#8211;2 cigarettes/week)</string>
    <string name="profile_smoking_4">Regularly (1&#8211;5 cigarettes/day)</string>
    <string name="profile_smoking_5">Frequently (5+ cigarettes/day)</string>
    <string name="profile_alcohol_text">How often do you drink alcohol?</string>
    <string name="profile_alcohol_1">Never</string>
    <string name="profile_alcohol_2">Rarely (1&#8211;2 drinks/month)</string>
    <string name="profile_alcohol_3">Occasionally (1&#8211;2 drinks/week)</string>
    <string name="profile_alcohol_4">Regularly (3&#8211;4 drinks/week)</string>
    <string name="profile_alcohol_5">Frequently (5+ drinks/week)</string>
    <string name="profile_coffee_text">How often do you drink coffee?</string>
    <string name="profile_coffee_1">Never</string>
    <string name="profile_coffee_2">Rarely (1&#8211;2 cups/month)</string>
    <string name="profile_coffee_3">Occasionally (1&#8211;2 cups/week)</string>
    <string name="profile_coffee_4">Regularly (1&#8211;2 cups/day)</string>
    <string name="profile_coffee_5">Frequently (3+ cups/day)</string>
    <string name="profile_exercise_text">How often do you get exercise? (20&#8211;30m of moderate intensity)</string>
    <string name="profile_exercise_1">Never</string>
    <string name="profile_exercise_2">Rarely (1&#8211;2 times/month)</string>
    <string name="profile_exercise_3">Occasionally (1&#8211;2 times/week)</string>
    <string name="profile_exercise_4">Regularly (3&#8211;4 times/week)</string>
    <string name="profile_exercise_5">Frequently (5+ times/week)</string>
    <string-array name="school_array">
        <item>Unspecified</item>
        <item>Annenberg School for Communication</item>
        <item>Arts and Sciences</item>
        <item>Dental Medicine</item>
        <item>Design</item>
        <item>Engineering</item>
        <item>Graduate School of Education</item>
        <item>Law School</item>
        <item>Nursing</item>
        <item>Perelman School of Medicine</item>
        <item>Social Policy and Practice</item>
        <item>Veterinary Medicine</item>
        <item>The Wharton School</item>
    </string-array>
    <string-array name="class_year_array">
        <item>Unspecified</item>
        <item>Freshman</item>
        <item>Sophomore</item>
        <item>Junior</item>
        <item>Senior</item>
        <item>Master\'s</item>
        <item>PhD</item>
        <item>Penn Employee</item>
    </string-array>
    
    
	<!-- Excuses strings -->
	<string name="excuse_prompt">I had________before bed (check all that apply):</string>
	<string name="excuse1">Caffeine (coffee, tea, soda, etc)</string>
	<string name="excuse2">Alcohol</string>
	<string name="excuse3">Nicotine</string>
	<string name="excuse4">Sugar (candy, soda, etc)</string>
	<string name="excuse5">Screen Time (PC, iPad, TV, Kindle, etc)</string>
	<string name="excuse6">Exercise</string>
	
	<!-- ModifyTimeActivity dialog strings -->
	<string name="time_error_title">Error</string>
	<string name="time_error_message">time set error: asleeptime later than awaketime.</string>
	<string name="time_error_button">Reset</string>
	
	<!-- LogActivity Headings -->
	<string name="rating_header">Rate Your Sleep</string>
	<string name="excuse_header">Sleep Inhibitors</string>
	<string name="comment_header">Additional Comments</string>
	<string name="concentration_header">Rate Your concentration(only for sleep)</string>
	
	<!-- MainActivity dialog strings -->
	<string name="podcast_dialog_title">Podcast</string>
	<string name="podcast_dialog_message">Would you like to listen to the Podcast?</string>
	<string name="nap_dialog_title">Nap or Sleep</string>
	<string name="nap_dialog_message">Are you taking a nap or going to sleep for the night?</string>
	<string name="delete_dialog_title">Delete Entry</string>
	<string name="delete_dialog_message">Would you like to delete this entry?</string>
	<string name="concentration_dialog_title">Please rate your concentration level</string>
	<string-array name="concentration_array">
	    <item>"Level 1"</item>
	    <item>"Level 2"</item>
	    <item>"Level 3"</item>
	    <item>"Level 4"</item>
	    <item>"Level 5"</item>
	</string-array>
</resources>
