<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_linear_layout"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:paddingBottom="20dip" >
    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
	    android:layout_height="0sp"
	    android:gravity="center"
	    android:layout_weight="1"
	    android:textSize="40sp"
	    android:textColor="@color/off_white" />
    <Button
        android:id="@+id/sleep_wake_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="32"
        android:layout_marginTop="20dip"
        android:text="@string/go_to_sleep"
        android:textSize="40sp"
        android:textColor="@color/off_white"
        android:onClick="onClickSleepOrWake" />
    <TextView
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_weight="1"
	    android:layout_marginTop="20dip"
	    android:text="@string/tip_of_day"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:textColor="@color/off_white" />
    <TextView
        android:id="@+id/tip"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_weight="1"
	    android:textSize="20sp"
	    android:textColor="@color/off_white" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:orientation="horizontal" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dip" >
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/view_data"
	        android:textSize="20sp"
	        android:textColor="@color/off_white"
	        android:onClick="onClickData" />
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/view_graphs"
	        android:textSize="20sp"
	        android:textColor="@color/off_white" 
	        android:onClick="onClickGraph" />
	</LinearLayout>
</LinearLayout>