<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/profile_list"
   	android:layout_width="match_parent"
   	android:layout_height="0dip"
   	android:layout_weight="1"
   	android:fadeScrollbars="false" >
   	<LinearLayout
    	android:orientation="vertical" 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
   		android:divider="@color/off_white"
   		android:dividerHeight="1sp"
    	android:background="@color/background_color">
    	<TextView
		    android:id="@+id/profile_title"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:textSize="25sp"
		    android:text="@string/profile_title"
		    android:textStyle="bold"
		    android:textColor="@color/off_white" />
        <LinearLayout
	    	android:orientation="vertical" 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@color/background_color"
	    	android:layout_gravity="center"
   			android:divider="@color/off_white"
   			android:dividerHeight="1sp"
	    	android:padding="10dip" >
	    	
	    	<!-- Gender Selector --> 
	    	<LinearLayout
		    android:orientation="horizontal" 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
		    android:paddingTop="10dip">
		    	<TextView
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:gravity="center_vertical|left"
		    		android:textSize="15sp"
		    		android:paddingLeft="10dip"
		    		android:text="@string/profile_gender_text"
		    		android:textColor="@color/off_white" />
	      		<Spinner
   					android:id="@+id/profile_gender_spinner"
   					android:layout_width="fill_parent"
   					android:gravity="center_vertical|right"
   					android:paddingRight="10dip"
   					android:layout_height="wrap_content"
   					android:entries="@array/gender_array" />
 			</LinearLayout>
 			
	    	<!-- Class Year Selector --> 
	    	<LinearLayout
		    android:orientation="horizontal" 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
		    android:paddingTop="10dip">
		    	<TextView
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:gravity="center_vertical|left"
		    		android:textSize="15sp"
		    		android:paddingLeft="10dip"
		    		android:text="@string/profile_class_year_text"
		    		android:textColor="@color/off_white" />
	      		<Spinner
   					android:id="@+id/profile_class_year_spinner"
   					android:layout_width="fill_parent"
   					android:gravity="center_vertical|right"
   					android:paddingRight="10dip"
   					android:layout_height="wrap_content"
   					android:entries="@array/class_year_array" />
 			</LinearLayout>
 			
 			<!-- Penn School Selector -->
 			<LinearLayout
		    android:orientation="horizontal" 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="0dip">
		    	<TextView
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:gravity="center_vertical|left"
		    		android:textSize="15sp"
		    		android:paddingLeft="10dip"
		    		android:text="@string/profile_school_text"
		    		android:textColor="@color/off_white" />		      		
	      		<Spinner
   					android:id="@+id/profile_school_spinner"
   					android:layout_width="fill_parent"
   					android:gravity="center_vertical|right"
   					android:paddingRight="10dip"
   					android:layout_height="wrap_content"
   					android:entries="@array/school_array"/>		    	    
        	</LinearLayout>
        	
 		</LinearLayout>	
    </LinearLayout>
</ScrollView>
